--- a/styles.css
+++ b/styles.css
@@ -10,16 +10,19 @@ header{
 	overflow: visible;
 }
 main{
-	height: calc( 100% - 40px );
+	/*height: calc( 100% - 40px );*/
+	height: 100%;
 	position: relative;
 }
-#map-canvas,.map_area{
+#map-canvas{
 	height: 100%;
 	width: 100%;
 }
-main>.row,main>.row>.col{
-	height: 100%
+.fill { 
+    min-height: 100%;
+    height: 100%;
 }
+
 main>.row{
 	margin: 0;
 }
