--- a/styles.css
+++ b/styles.css
@@ -1,46 +1,50 @@
+/**************** common ****************/
 html,body {
 	height: 100%;
 }
 
-nav{
-	background-color: #99ccff;
-}
+
 header{
 	position: relative;
 	overflow: visible;
 }
 main{
-	/*height: calc( 100% - 40px );*/
-	height: 100%;
+	height: calc( 100% - 40px );
 	position: relative;
 }
-#map-canvas{
-	height: 100%;
-	width: 100%;
-}
+
 .fill { 
     min-height: 100%;
     height: 100%;
 }
 
-main>.row{
-	margin: 0;
-}
-main>.row>.col{
-	padding: 0;
-}
-#map-canvas{
-	overflow: initial !important; 
-}
-#search-nav{
-	z-index: 998;
-}
 i.left{
 	margin-right: 5px;
 }
 i.right{
 	margin-left: 5px;
 }
+.clr{
+	float: none;
+	clear: both;
+}
+
+/**************** custom ****************/
+.fixed-action-btn{
+	right: initial;
+}
+
+/**************** map ****************/
+#map-canvas{
+	height: 100%;
+	width: 100%;
+}
+main>.row, main>.row>.col{
+	margin: 0;
+	padding: 0;
+}
+
+/**************** top nav ****************/
 .topnav .nav-wrapper{
 	padding: 0 0 0 10px;
 }
@@ -68,6 +72,11 @@ i.right{
 #search-nav{
 	position: absolute;
 	top: 40px;
+	z-index: 998;
+}
+nav, nav .nav-wrapper i, nav a.button-collapse, nav a.button-collapse i{
+	height: 40px !important;
+    line-height: 40px !important
 }
 
 /**************** login form ****************/
@@ -88,10 +97,10 @@ i.right{
 	margin-bottom: 0px;
 }
 
-/**************** right menu ****************/
-.rightmenu{
-	position: absolute;
-	right: 0px;
-	top: 20px;
-	overflow: visible;
+/**************** right panel ****************/
+#underwaylist,#anchorlist{
+	padding: 0;
+}
+#underwaylist .collection,#anchorlist .collection{
+	margin: 0;
 }
